Bug 333778 - Disabling "Enable detection of missing attachments" setting ignored
Summary: Disabling "Enable detection of missing attachments" setting ignored
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 4.13
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-23 16:02 UTC by Graeme Hewson
Modified: 2014-04-23 19:16 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.13.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Graeme Hewson 2014-04-23 16:02:21 UTC
If the word "attached" is entered into a message being composed, a message pops up at the bottom of the window saying "The message you have composed seems to refer to an attached file but you have not attached anything. Do you want to attach a file to your message?"

This happens regardless of whether or not in Settings / Configure Kmail / Composer / Attachments tab, "Enable detection of missing attachments" is ticked.

(I've never seen the message before 4.13. Yet there's a blog post from 2004 where someone comments on it. Strange.)
Comment 1 Laurent Montel 2014-04-23 17:07:24 UTC
I confirm it.
Comment 2 Laurent Montel 2014-04-23 19:16:03 UTC
Git commit e41515897c2701fec9892259735c2b81f55fa518 by Montel Laurent.
Committed on 23/04/2014 at 19:15.
Pushed by mlaurent into branch 'KDE/4.13'.

Fix Bug 333778 - Disabling "Enable detection of missing attachments" setting ignored

FIXED-IN: 4.13.1

M  +5    -3    kmail/editor/kmcomposewin.cpp

http://commits.kde.org/kdepim/e41515897c2701fec9892259735c2b81f55fa518