Fix Bug 333778 - Disabling "Enable detection of missing attachments" setting ignored

FIXED-IN: 4.13.1
BUG: 333778